# neugenfair

./: .gitignore  .gitlab-ci.yml  LICENCE  Makefile  README.md  create_project.sh  mkdocs.yml  pyproject.toml
data/deliverable/: minimalistic.jsonld  minimalstic.ttl
data/input/: minimalistic.vcf
neugenfair/: cli.py
neugenfair/mappers/: model_mapper.py
neugenfair/models/: individual.py  neugenfairmodel.py  neurogenmodel.py  variant.py
neugenfair/parsers/: vcf_parser.py
neugenfair/writer/: rdf_writer.py
schemas/: model.yaml  model_shacl.ttl  neugenfairmodel.owl.ttl  neugenfairmodel.ttl  neugenfairmodel.yaml  neugenfairmodel_merger.py  neugenfairmodel_shacl.ttl
schemas/docs/: AlternateAllele.md  AssemblySequence.md  Boolean.md  Cohort.md  Curie.md  Date.md  DateOrDatetime.md  Datetime.md  Decimal.md  Double.md  Float.md  Individual.md  Integer.md  Jsonpath.md  Jsonpointer.md  Ncname.md  NeugenFAIRSchema.md  Nodeidentifier.md  Nomenclature.md  Objectidentifier.md  Position.md  ReferenceAllele.md  Region.md  SequenceAlteration.md  Sparqlpath.md  String.md  Time.md  Uri.md  Uriorcurie.md  Variant.md  VariantIdentifier.md  VariationSite.md  age.md  alt.md  begins_at.md  chrom.md  ends_at.md  has_alternate_allele.md  has_alternate_part.md  has_identifier.md  (+23 more)
schemas/models/: blank_model_AnyClass.yaml  model_AlternateAllele.yaml  model_AssemblySequence.yaml  model_Cohort.yaml  model_Individual.yaml  model_Position.yaml  model_ReferenceAllele.yaml  model_Region.yaml  model_SequenceAlteration.yaml  (+3 more)
site/: 404.html  index.html
src/: neugenfairmodel_merger.py
(+64 files in other folders)
